--- a/assets/i18n/MyBundle_en.properties
+++ b/assets/i18n/MyBundle_en.properties
@@ -8,6 +8,7 @@ tutorial_esquiva=Dodge the projectiles
 tutorial_sobrevive=Survive the longest distance possible
 tutorial_completado=TURORIAL COMPLETED
 creditos=CREDITS
+nivel=Level
 newMission={0}, you have a new mission. Reach level {1}.
 coveredPath=You covered {0,number}% of the path
 highScoreTime=High score achieved on {0,date} at {0,time}
