--- a/assets/i18n/MyBundle_es.properties
+++ b/assets/i18n/MyBundle_es.properties
@@ -7,7 +7,8 @@ tutorial_btn_izquierdo=Movimiento Arriba Izquierda
 tutorial_esquiva=Esquiva los proyectiles 
 tutorial_sobrevive=Sobrevive la mayor distancia posible
 tutorial_completado=TURORIAL COMPLETADO
-creditos=CREDITOS
+creditos=CRÉDITOS
+nivel=Nivel
 newMission={0}, you have a new mission. Reach level {1}.
 coveredPath=You covered {0,number}% of the path
 highScoreTime=High score achieved on {0,date} at {0,time}
