--- a/assets/i18n/MyBundle_es.properties
+++ b/assets/i18n/MyBundle_es.properties
@@ -9,6 +9,8 @@ tutorial_sobrevive=Sobrevive la mayor distancia posible
 tutorial_completado=TURORIAL COMPLETADO
 creditos=CRÃ‰DITOS
 nivel=Nivel
+equipo=Equipo
+musica=Música
 newMission={0}, you have a new mission. Reach level {1}.
 coveredPath=You covered {0,number}% of the path
 highScoreTime=High score achieved on {0,date} at {0,time}
