--- a/assets/i18n/MyBundle_en.properties
+++ b/assets/i18n/MyBundle_en.properties
@@ -11,7 +11,7 @@ creditos=CREDITS
 nivel=Level
 equipo=Team
 musica=Music
-gracias=Thanks to...
+gracias=THANKS TO...
 newMission={0}, you have a new mission. Reach level {1}.
 coveredPath=You covered {0,number}% of the path
 highScoreTime=High score achieved on {0,date} at {0,time}
