--- a/assets/i18n/MyBundle_en.properties
+++ b/assets/i18n/MyBundle_en.properties
@@ -12,6 +12,7 @@ nivel=Level
 equipo=Team
 musica=Music
 gracias=THANKS TO...
+participantes=Participants
 newMission={0}, you have a new mission. Reach level {1}.
 coveredPath=You covered {0,number}% of the path
 highScoreTime=High score achieved on {0,date} at {0,time}
