--- a/assets/i18n/MyBundle_es.properties
+++ b/assets/i18n/MyBundle_es.properties
@@ -12,6 +12,7 @@ nivel=Nivel
 equipo=Equipo
 musica=Música
 gracias= GRACIAS A...
+participantes=Participantes
 newMission={0}, you have a new mission. Reach level {1}.
 coveredPath=You covered {0,number}% of the path
 highScoreTime=High score achieved on {0,date} at {0,time}
