--- a/assets/i18n/MyBundle_es.properties
+++ b/assets/i18n/MyBundle_es.properties
@@ -10,10 +10,9 @@ tutorial_completado=TURORIAL COMPLETADO
 creditos=CRÉDITOS
 nivel=Nivel
 equipo=Equipo
-musica=Música
+musica=Música y Recursos
 gracias= GRACIAS A...
 participantes=Participantes
-recurso=Recursos
 newMission={0}, you have a new mission. Reach level {1}.
 coveredPath=You covered {0,number}% of the path
 highScoreTime=High score achieved on {0,date} at {0,time}
