--- a/assets/i18n/MyBundle_en.properties
+++ b/assets/i18n/MyBundle_en.properties
@@ -10,10 +10,9 @@ tutorial_completado=TURORIAL COMPLETED
 creditos=CREDITS
 nivel=Level
 equipo=Team
-musica=Music
+musica=Music and Recurses
 gracias=THANKS TO...
 participantes=Participants
-recurso=Recurses
 newMission={0}, you have a new mission. Reach level {1}.
 coveredPath=You covered {0,number}% of the path
 highScoreTime=High score achieved on {0,date} at {0,time}
